# planpilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROVIDER_API_IMPLEMENTATION.md  README.md  RELEASE.md  SECURITY.md  codecov.yml  planpilot.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: coding-style.md  hooks.md  patterns.md  security.md  testing.md
.codex-plugin/: plugin.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  secrets.yml  test-release.yml
assets/branding/navigator/: README.md
commands/: sync.md
docs/: AGENTS.md  PROVIDER_API_IMPLEMENTATION_COMPLETE.md  README.md  architecture.md  cli-reference.md  e2e-test-plan.md  e2e-testing.md  how-it-works.md  layer-sdk-drift-review-and-remediation-plan.md  migration.md  phase-2-maintainability-refactor-plan.md  phase-3-module-ownership-migration-plan.md  phase-3-sdk-cli-responsibility-plan.md  schemas.md
docs/architecture/: v1-scope.md
docs/decisions/: 001-ariadne-codegen.md
docs/design/: architecture.md  async-parallelization.md  clean.md  codemap.md  contracts.md  documentation-architecture.md  engine-test-fixture-extraction.md  engine.md  fake-provider-integration-tests.md  map-sync.md  multi-epic-sync.md  repository-layout.md  retry-strategy.md  security-quality-hardening-plan.md  slice-validation.md
docs/guides/: plugin-skills-guide.md  troubleshooting.md
docs/legacy-v1/: architecture.md  cli-reference.md  how-it-works.md
docs/legacy-v1/design/: README.md  retry-strategy.md  slice-validation.md
docs/modules/: auth.md  clean.md  cli.md  config.md  github-provider.md  map-sync.md  plan.md  providers.md  renderers.md  sdk.md
docs/plans/: 2026-02-09-phase3-sdk.md  2026-02-09-phase4-cli.md  2026-02-13-docs-coverage-and-ia-execution-plan.md  2026-02-13-docs-index-completeness-plan.md  2026-02-13-docs-ownership-refresh-plan.md  2026-02-13-docs-refresh-execution-plan.md  2026-02-13-full-repo-docs-overhaul-plan.md  2026-02-13-post-execution-review-2.md  2026-02-13-post-execution-review.md  2026-02-13-repo-review-and-docs-plan.md  2026-02-19-claude-plugin-design.md  2026-02-19-claude-plugin.md  2026-02-19-prd-and-tech-spec-skills-design.md  2026-02-19-prd-and-tech-spec-skills.md  README.md
docs/prd/: planpilot-validate-prd.md
docs/reference/: cli-reference.md  config-reference.md  developer-workflow.md  docs-inventory.md  exit-codes.md  plan-schemas.md  plugin-reference.md  sdk-reference.md  workflows-reference.md
docs/testing/: e2e.md
docs/v2/: README.md  architecture.md  cli.md  config.md  engine.md  github-provider-research.md  plan.md  providers.md  renderers.md  sdk.md
docs/v2/design/: architecture.md  contracts.md  engine.md
docs/v2/modules/: auth.md  cli.md  config.md  github-provider.md  providers.md  renderers.md  sdk.md
examples/: README.md  dry-run-output.txt  epics.json  planpilot.json  stories.json  sync-map-sample.json  tasks.json
examples/full-workflow/: README.md  planpilot.json  tasks.json
examples/full-workflow/plans/: epics.json  stories.json
examples/full-workflow/spec/: planpilot-validate-spec.md
examples/output/: epic-E-1.md  story-S-1.md  story-S-2.md  task-T-1.md  task-T-2.md  task-T-3.md
examples/sync-workflow/: README.md  planpilot.json
examples/sync-workflow/plans/: stories.json  tasks.json
scripts/: actionlint.sh  check_markdown_links.py  check_release_surfaces.py  commit-msg  install-hooks.sh  smoke-test.sh
skills/: INSTALL.agent.md  INSTALL.md
skills/create-prd/: SKILL.md
skills/create-tech-spec/: SKILL.md
skills/plan-sync/: SKILL.md
skills/roadmap-to-github-project/: INSTALL.md  SKILL.md
skills/roadmap-to-github-project/helpers/: slice_epics_for_sync.py
src/plan_gh_project_sync/: body_render.py  cli.py  github_api.py  project_fields.py  relations.py  slice.py  sync.py  types.py  utils.py
src/planpilot/: AGENTS.md  __init__.py  __main__.py  body_render.py  cli.py  config.py  exceptions.py  github_api.py  metadata.py  progress.py  project_fields.py  relations.py  scaffold.py  sdk.py  slice.py  sync.py  types.py  utils.py
src/planpilot/.claude-plugin/: plugin.json
src/planpilot/auth/: __init__.py  factory.py
src/planpilot/clean/: __init__.py  deletion_planner.py
src/planpilot/cli/: __init__.py  __main__.py  app.py  common.py  parser.py
src/planpilot/commands/: prd.md  spec.md
src/planpilot/config/: __init__.py  (+2 more)
src/planpilot_v2/: __init__.py  __main__.py  cli.py  sdk.py
tests/: AGENTS.md  conftest.py  test_cli.py  test_cli_auth_preflight.py  test_cli_init_exports.py  test_cli_layer_boundary.py  test_cli_map_sync.py  test_cli_package_structure.py  test_cli_persistence_sync_map.py  test_exceptions.py  test_layer_boundaries.py  test_main_module.py  test_module_ownership_migration.py  test_progress.py  test_release_surfaces.py  test_scaffold.py  test_sdk.py  test_sdk_map_sync.py  test_sdk_ops_package_structure.py  test_slice.py  test_sync_preflight.py  test_utils.py
tests/auth/: test_env.py  test_factory.py  test_gh_cli.py  test_static.py
tests/contracts/: test_config_types.py  test_exceptions.py  test_init_contract.py  test_item_types.py  test_plan_types.py  test_sync_types.py
tests/e2e/: test_cli_e2e.py
tests/engine/: test_engine.py
tests/fakes/: provider.py  renderer.py  test_provider.py  test_renderer.py
tests/models/: test_plan.py  test_project.py  test_sync.py
tests/plan/: test_hasher.py  test_loader.py  test_validator.py
tests/providers/: test_dry_run.py  test_factory.py
tests/renderers/: test_factory.py  test_markdown.py
tests/rendering/: test_components.py  test_markdown.py
tests/sync/: test_engine.py  test_orchestrator.py  test_relations.py
tests/v2/: conftest.py  test_cli.py  test_main_module.py  test_sdk.py
tools/: ariadne-schema.toml  slice_epics_for_sync.py
(+359 files in other folders)
