[tool.poetry]
name = "planpilot"
version = "1.0.1"
description = "Sync roadmap plans (epics, stories, tasks) to GitHub Issues and Projects v2"
readme = "README.md"
license = "MIT"
authors = ["aryeko"]
homepage = "https://github.com/aryeko/planpilot"
repository = "https://github.com/aryeko/planpilot"
keywords = ["github", "projects", "roadmap", "sync", "issues"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "planpilot", from = "src"}]
exclude = ["skills"]

[tool.poetry.scripts]
planpilot = "planpilot.cli:main"
planpilot-slice = "planpilot.slice:slice_cli"

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
ruff = ">=0.4"
mypy = ">=1.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
commitlint = ">=1.3"
poethepoet = "^0.40.0"
python-semantic-release = {version = "10.5.3", python = ">=3.11,<4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
test = "pytest -v"
coverage = "pytest -v --cov-report=html:.coverage/html"
typecheck = "mypy src/planpilot"
check = ["lint", "format-check", "test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=planpilot --cov-report=term-missing --cov-report=xml:.coverage/coverage.xml"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["planpilot"]
branch = true
data_file = ".coverage/coverage.db"

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["planpilot"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["src/planpilot/__init__.py:__version__"]
commit_parser = "conventional"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
major_on_zero = true
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.remote]
type = "github"
