[tool.poetry]
name = "planpilot"
version = "2.5.0"
description = "Sync roadmap plans (epics, stories, tasks) to GitHub Issues and Projects v2"
readme = "README.md"
license = "MIT"
authors = ["Arye Kogan"]
maintainers = ["Arye Kogan"]
homepage = "https://github.com/aryeko/planpilot"
repository = "https://github.com/aryeko/planpilot"
documentation = "https://github.com/aryeko/planpilot/tree/main/docs"
keywords = ["github", "projects", "roadmap", "sync", "issues", "project-management", "cli", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Office/Business :: Scheduling",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Environment :: Console",
]
packages = [
    {include = "planpilot", from = "src"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aryeko/planpilot/issues"
"Changelog" = "https://github.com/aryeko/planpilot/blob/main/CHANGELOG.md"
"Documentation" = "https://github.com/aryeko/planpilot/tree/main/docs"

[tool.poetry.scripts]
planpilot = "planpilot.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.12.5"
httpx = "^0.28"
questionary = "^2.1"
rich = "^14.3.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
ruff = ">=0.4"
mypy = ">=1.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
commitlint = ">=1.3"
poethepoet = ">=0.40,<0.43"
python-semantic-release = {version = "10.5.3", python = ">=3.11,<4.0"}
# ariadne-codegen is run via pipx (click conflict with python-semantic-release)
# pipx run --spec "ariadne-codegen>=0.17,<0.18" ariadne-codegen

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
workflow-lint = "./scripts/actionlint.sh"
docs-links = "python scripts/check_markdown_links.py"
test = "pytest -v --ignore=tests/e2e"
test-e2e = "pytest -v tests/e2e/test_cli_e2e.py"
coverage = "pytest -v --cov-report=html:.coverage/html"
coverage-e2e = "pytest -v tests/e2e/test_cli_e2e.py --cov-report=term-missing --cov-report=xml:.coverage/coverage-e2e.xml"
typecheck = "mypy src/planpilot"
check = ["lint", "format-check", "typecheck", "test"]

[tool.poe.tasks.gen-schema]
help = "Introspect GitHub GraphQL API and download schema"
shell = "export GITHUB_TOKEN=\"bearer $(gh auth token)\" && pipx run --spec 'ariadne-codegen>=0.17,<0.18' ariadne-codegen graphqlschema --config tools/ariadne-schema.toml"

[tool.poe.tasks.gen-client]
help = "Generate typed GraphQL client from schema and operations"
shell = "rm -rf src/planpilot/core/providers/github/github_gql && pipx run --spec 'ariadne-codegen>=0.17,<0.18' ariadne-codegen && ruff check --fix src/planpilot/core/providers/github/github_gql && ruff format src/planpilot/core/providers/github/github_gql"

[tool.poe.tasks.gen-gql]
help = "Download schema and generate GraphQL client"
sequence = ["gen-schema", "gen-client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=planpilot --cov-report=term-missing --cov-report=xml:.coverage/coverage.xml"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::RuntimeWarning:coverage",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["planpilot"]
branch = true
data_file = ".coverage/coverage.db"
omit = [
    "src/planpilot/core/providers/github/github_gql/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"src/planpilot/core/providers/github/github_gql/*" = ["F401", "RUF022", "UP042", "UP045", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["planpilot"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
files = ["src/planpilot"]
exclude = "(^src/planpilot/core/providers/github/github_gql/)"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["src/planpilot/__init__.py:__version__", "src/planpilot/.claude-plugin/plugin.json:version"]
commit_parser = "conventional"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
major_on_zero = true
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.remote]
type = "github"

[tool.ariadne-codegen]
schema_path = "src/planpilot/core/providers/github/schema.graphql"
queries_path = "src/planpilot/core/providers/github/operations"
target_package_name = "github_gql"
target_package_path = "src/planpilot/core/providers/github"
client_name = "GitHubGraphQLClient"
client_file_name = "client"
async_client = true
convert_to_snake_case = true
include_all_inputs = false
include_all_enums = false
include_comments = "stable"
enable_custom_operations = false
opentelemetry_client = false
plugins = [
    "ariadne_codegen.contrib.extract_operations.ExtractOperationsPlugin",
    "ariadne_codegen.contrib.client_forward_refs.ClientForwardRefsPlugin",
    "ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin",
]

[tool.ariadne-codegen.extract_operations]
operations_module_name = "operations"

[tool.ariadne-codegen.scalars.Date]
type = "datetime.date"

[tool.ariadne-codegen.scalars.DateTime]
type = "datetime.datetime"

[tool.ariadne-codegen.scalars.PreciseDateTime]
type = "datetime.datetime"

[tool.ariadne-codegen.scalars.GitTimestamp]
type = "datetime.datetime"

[tool.ariadne-codegen.scalars.BigInt]
type = "int"

[tool.ariadne-codegen.scalars.URI]
type = "str"

[tool.ariadne-codegen.scalars.Base64String]
type = "str"

[tool.ariadne-codegen.scalars.GitObjectID]
type = "str"

[tool.ariadne-codegen.scalars.GitRefname]
type = "str"

[tool.ariadne-codegen.scalars.GitSSHRemote]
type = "str"

[tool.ariadne-codegen.scalars.HTML]
type = "str"

[tool.ariadne-codegen.scalars.X509Certificate]
type = "str"
